--- a/Python/recipes/templates/index.html
+++ b/Python/recipes/templates/index.html
@@ -11,7 +11,7 @@
         <div id="wrap">
         <div class="col">
         <h1>Register</h1>
-        <form action="/" method="POST">
+        <form action="/save" method="POST">
         <label for="first_name">First Name:</label>
         <input type="text" name="first_name">
         <label for="last_name">Last Name:</label>
