--- a/Python/EXAM 3/templates/mainPage2.html
+++ b/Python/EXAM 3/templates/mainPage2.html
@@ -7,19 +7,22 @@
     </head>
     <body>
         <div id="header">
-            <a href="/mainPage2/{{session['userID']}}" class="headerLink">Dashboard</a>
+            <a href="/createCar/{{session['userID']}}" class="headerLink">Create</a>
             <a href="/logout" class="headerLink">logout</a>
         </div>
-        <h1>PyPie Derby</h1>
+        <h1>PyPies by {{users[session['dictIndex']|int].first_name}}</h1>
+        <h3>Cars for Sale</h3>
         <table style="width:70%">
             <tr>
-                <td>Name</td>
-                <td>PyPie By</td>
-                <td>Votes</td>
+                <td>Model</td>
+                <td>Year</td>
+                <td>Seller</td>
+                <td>Actions</td>
             </tr>
             {%for i in range(cars|length)%}
             <tr>
-                <td><a href="/showCar/{{i}}">{%print(cars[i].model)%}</a></td>
+                <td>{%print(cars[i].model)%}</td>
+                <td>{%print(cars[i].year)%}</td>
                 <td>
                     {%for j in range(users|length)%}
                         {%if(cars[i].users_id == users[j].id)%}
@@ -28,7 +31,13 @@
                         {%endif%}
                     {%endfor%}
                 </td>
-                <td>{%print(cars[i].year)%}</td>
+                <td class="actions">
+                    <a href="/showCar/{{i}}">View</a>
+                    <p>{%if(session['userID'] == cars[i].users_id):%}
+                        <a href="/editCar/{{i}}">Edit</a>
+                        {%endif%}
+                    </p>
+                </td>
             </tr>
             {% endfor %}
         </table>
