--- a/Python/PYPIES/templates/editCar.html
+++ b/Python/PYPIES/templates/editCar.html
@@ -12,19 +12,15 @@
         </div>
         <h1>Edit {{cars[id|int].model}}</h1>
         <form action="/updateCar/{{cars[id|int].id}}" method="POST">
-            <label for="price" >Price:</label>
-            <input type="text" name="price" value="{{cars[id|int].price}}">
-            <label for="make" >Make:</label>
-            <input type="text" name="make" value="{{cars[id|int].make}}">
-            <label for="model" >Model:</label>
+            <label for="model" >Name:</label>
             <input type="text" name="model" value="{{cars[id|int].model}}">
-            <label for="year" >Year:</label>
-            <input type="text" name="year" value="{{cars[id|int].year}}">
 
-            <label for="description" >Description:</label>
-            <input type="text" name="description" class="largeBox" value="{{cars[id|int].description}}">
+            <label for="description" >Filling:</label>
+            <input type="text" name="description" value="{{cars[id|int].description}}">
             
-            <input type="submit" value="Update">
+            <label for="make" >Crust:</label>
+            <input type="text" name="make" value="{{cars[id|int].make}}">
+            <input type="submit" value="Edit Pie">
             </form>
     </body>
 </html>
