--- a/Python/PYPIES/templates/mainPage2.html
+++ b/Python/PYPIES/templates/mainPage2.html
@@ -44,5 +44,6 @@
             
             <input type="submit" value="Add Pie">
             </form>
+            <p>{{session['error']}}</p>
     </body>
 </html>
