--- a/Python/PYPIES - OLD MAN/templates/index.html
+++ b/Python/PYPIES - OLD MAN/templates/index.html
@@ -22,7 +22,7 @@
         <input type="password" name="confPass">
         <input type="submit" value="Register">
     </form>
-    <p>{{session['error']}}</p>
+    <p>{{error}}</p>
     </div>
     <div class="col">
         <h1>Login</h1>
