--- a/Python/PYPIES/templates/show.html
+++ b/Python/PYPIES/templates/show.html
@@ -7,24 +7,18 @@
     </head>
     <body>
         <div id="header">
-            <a href="/mainPage/{{session['userID']}}" class="headerLink">Dashboard</a>
+            <a href="/createPainting/{{session['userID']}}" class="headerLink">Add Painting</a>
+            <a href="/mainPage2/{{session['userID']}}" class="headerLink">Dashboard</a>
             <a href="/logout" class="headerLink">logout</a>
         </div>
         <div id="showBox">
-        <h3>{{cars[id|int].model}} by 
-
-            {%for j in range(users|length)%}
-                    {%if(cars[id|int].users_id == users[j].id)%}
-                        {%print(users[j].first_name)%}
-                        {%print(users[j].last_name)%}
-                    {%endif%}
-            {%endfor%}
-
+        <h1>{{paintings[id|int].title}}</h1>
+        <h3>Painted by 
+            {{paintings[id|int].first_name}} 
+            {{paintings[id|int].last_name}}
         </h3>
-        <p>{{cars[id|int].description}} with a {{cars[id|int].make}}</p>
-        <p>Cast a Vote:</p>
-        <a href="/addVote{{cars[id|int].id}}">Delicious</a>
+        <p>Description:<br>{{paintings[id|int].description}}</p>
+        <p>Price:<br>${{paintings[id|int].price}}</p>
         </div>
-        <a href="/delete{{cars[id|int].id}}">Purchase</a>
     </body>
 </html>
