--- a/C#/ORMs/EFCore/Dishes/Dishes/Views/Home/Index.cshtml
+++ b/C#/ORMs/EFCore/Dishes/Dishes/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@model List<Dish>
+<!DOCTYPE html>
 <html>
     <head>
         <link rel="stylesheet" href="~/css/style.css"/>
@@ -6,5 +7,13 @@
     </head>
     <body>
         <h1>Welcome to CRUDelicious!</h1>
+        <ul>
+            @{
+    foreach(var dish in @Model)
+    {
+        <li><a href="http://www.google.com">@dish.Name</a> by @dish.chefName</li>
+    }
+}
+        </ul>
     </body>
 </html>
